# Verificar_boletos

./: .gitmodules  Guia.txt  build.cmd  configuracao.json  documento_temporario.txt  main.py  main2.py  main3.py  pyproject.toml  teste.py  teste2.py  verificar_boletos.spec  version.py
pacote_para_a_executacao/: .env  configuracao.json  documento_temporario.txt
