[tool.poetry]
name = "verificar-boletos"
version = "0.1.0"
description = ""
authors = ["rafaelmoreno-estasa <rafaelmoreno.estasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "^2.32.3"
bs4 = "^0.0.2"
pyinstaller = "^6.12.0"
dotenv = "^0.9.9"
tqdn = "^0.2.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
